# Krypton.Carevo.JMR.MCP

./: .gitignore  DockerFile  Dockerfile  README.md  dockerFile  install.sh
.github/workflows/: build-push.yml
docs/: httpx_usage_example.md
libraries/jmr-lib/: pyproject.toml  requirements.txt
libraries/jmr-lib/src/common/: __init__.py  circuit_breaker.py  retry.py
libraries/jmr-lib/src/components/resources/: __init__.py  job_listing.py
libraries/jmr-lib/src/components/tools/: __init__.py  job_listing.py  user_application.py
libraries/jmr-lib/src/components/tools/schemas/: __init__.py  application_create_schema.json  application_filter_schema.json  application_update_schema.json  job_filter_schema.json  job_schema.json  job_view_schema.json
libraries/jmr-lib/src/models/context/: __init__.py  dbcontext.py  httpxcontext.py
libraries/jmr-lib/src/models/domain/jobs/: job.py
libraries/jmr-lib/src/models/dto/: __init__.py  application_request.py
libraries/jmr-lib/src/models/handler/: base_resource_handler.py
libraries/jmr-lib/src/utility/: config.yaml
servers/jmr-svc/: pyproject.toml  requirements.txt
servers/jmr-svc/src/: config.py  main.py
servers/jmr-svc/src/helpers/: resource_register.py  tools_register.py
servers/jmr-svc/src/managers/: __init__.py  http_context.py  mongo_context.py
servers/jmr-svc/src/services/: application_service.py  health_check_service.py  job_management_service.py
